--- a/frontend/Views/User/Edit.cshtml
+++ b/frontend/Views/User/Edit.cshtml
@@ -7,17 +7,21 @@
 
 <div>
 
-    <form action="" method="post">
-        <input type="hidden" name="id" value="@Model.Id">
-        <div class="form-group">
-            @Html.LabelFor(x => x.Name)
-            @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(x => x.Email)
-            @Html.TextBoxFor(x => x.Email, new { @class = "form-control" })
-        </div>
+    <div class="rows">
+        <div class="col-md-4">
+            <form action="" method="post">
+                <input type="hidden" name="id" value="@Model.Id">
+                <div class="form-group">
+                    @Html.LabelFor(x => x.Name)
+                    @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(x => x.Email)
+                    @Html.TextBoxFor(x => x.Email, new { @class = "form-control" })
+                </div>
 
-        <button class="btn btn-primary" type="submit">Save</button>
-    </form>
+                <button class="btn btn-primary" type="submit">Save</button>
+            </form>
+        </div>
+    </div>
 </div>
